force-app/main/default/objects/Call_Back_Request__c/Call_Back_Request__c.object-meta.xml
<CustomObject>
    <label>Call Back Request</label>
    <nameField>
        <label>Call Back Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Back Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>