force-app/main/default/objects/Call_Back_Request__c/fields/AMP_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>AMP_Source_ID__c</fullName>
    <label>Submitted Via AMP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>