force-app/main/default/objects/Call_Back_Request__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>CallbackContact</relationshipName>
    <type>Lookup</type>
</CustomField>