force-app/main/default/objects/Call_Back_Request__c/fields/Preferred_Call_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Call_Time__c</fullName>
    <label>Preferred Call Time</label>
    <type>DateTime</type>
</CustomField>